; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_data.c_get_labels.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_data.c_get_labels.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8** @get_labels(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8**, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i32* @get_paths(i8* %5)
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i64 @list_to_array(i32* %7)
  %9 = inttoptr i64 %8 to i8**
  store i8** %9, i8*** %4, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @free_list(i32* %10)
  %12 = load i8**, i8*** %4, align 8
  ret i8** %12
}

declare dso_local i32* @get_paths(i8*) #1

declare dso_local i64 @list_to_array(i32*) #1

declare dso_local i32 @free_list(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
